--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Interactive Product Card</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Credit Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="card">
-    <div class="circle">
-      <img src="image.png" alt="Pepsi Logo" class="logo">
+    <div class="main-container">
+        <div id="card-container">
+            <div id="card">
+                <div id="front">
+                    <div class="reflection"></div>
+                    <div class="type">PLATINUM</div>
+                    <div class="title-text">Bank Name</div>
+                    <div class="details">
+                        <div class="name">Person Name</div>
+                        <p id="hidden-number">1111 TCWX TCWX 1452</p>
+                    </div>
+                    <button id="show-btn">View Card Details</button>
+                    <div class="logo">MasterCard</div>
+                </div>
+                <div id="back">
+                    <div class="reflection"></div>
+                    <div id="chip">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="title-text">Bank Name</div>
+                    <div class="details">
+                        <div class="name">Person Name</div>
+                        <p id="hidden-number">1111 1223 1223 1452</p>
+                        <span id="cvv">CVV: 304</span>
+                        <span id="valid-date"> Expiry: 02/30</span>
+                    </div>
+                    <button id="hide-btn">Hide Card Details</button>
+                    <div class="logo">MasterCard</div>
+                </div>
+            </div>
+        </div>
     </div>
-    <img src="image1.png" alt="Pepsi Can" class="product_img">
-    <div class="content">
-		<h2>Pepsi</h2>
-		<p>Pepsi is a cool, refreshing drink that satisfies your thirst and delights your taste buds. Our secret blend of flavors.</p>
-      <a href="#">Shop Now</a>
-    </div>
-  </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
