--- a/index.html
+++ b/index.html
@@ -1,52 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Credit Card</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <title>CSS Snow Fox</title>
+    <link rel="stylesheet" href="https://public.codepenassets.com/css/normalize-5.0.0.min.css">
+<link rel="stylesheet" href="./style.css">
 
-<body>
-    <div class="main-container">
-        <div id="card-container">
-            <div id="card">
-                <div id="front">
-                    <div class="reflection"></div>
-                    <div class="type">PLATINUM</div>
-                    <div class="title-text">Bank Name</div>
-                    <div class="details">
-                        <div class="name">Person Name</div>
-                        <p id="hidden-number">1111 TCWX TCWX 1452</p>
-                    </div>
-                    <button id="show-btn">View Card Details</button>
-                    <div class="logo">MasterCard</div>
-                </div>
-                <div id="back">
-                    <div class="reflection"></div>
-                    <div id="chip">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <div class="title-text">Bank Name</div>
-                    <div class="details">
-                        <div class="name">Person Name</div>
-                        <p id="hidden-number">1111 1223 1223 1452</p>
-                        <span id="cvv">CVV: 304</span>
-                        <span id="valid-date"> Expiry: 02/30</span>
-                    </div>
-                    <button id="hide-btn">Hide Card Details</button>
-                    <div class="logo">MasterCard</div>
-                </div>
-            </div>
+  </head>
+    
+  <body>
+  <div class="fox">
+  <div class="leg-outer">
+    <div class="leg">
+      <div class="paw">
+        <div class="log">
+          <div class="log-inner">
+          </div>
         </div>
+      </div>
     </div>
+  </div>
+  <div class="leg-outer">
+    <div class="leg">
+      <div class="paw">
+        <div class="log">
+          <div class="log-inner"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="hind-leg-outer">
+    <div class="hind-leg-outer2">
+      <div class="hind-paw">
+        <div class="hind-log">
+          <div class="hind-log-inner">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="hind-leg-outer">
+    <div class="hind-leg-outer2">
+      <div class="hind-paw">
+        <div class="hind-log">
+          <div class="hind-log-inner">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="body">
+    <div class="head">
+      <div class="ears">
+        <div class="ear"></div>
+        <div class="ear"></div>
+      </div>
+      <div class="face"></div>
+      <div class="snout"></div>
+    </div>
+    <div class="tail">
+      <div class="tail">
+        <div class="tail">
+          <div class="tail">
+            <div class="tail">
+              <div class="tail">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tail2">
+        <div class="tail">
+          <div class="tail">
+            <div class="tail">
+              <div class="tail">
+                <div class="tail">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="snow"></div>
+    <script  src="./script.js"></script>
 
-    <script src="script.js"></script>
-</body>
-
+  </body>
+  
 </html>
