--- a/rotating-chrismas-mas-tree.html
+++ b/rotating-chrismas-mas-tree.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="rotating-xmas-tree.css">
+  <link rel="stylesheet" href="rotating-chrismas-tree.css">
   <title>Rotating xMas tree</title>
 </head>
   <body>
