--- a/index.html
+++ b/index.html
@@ -1,93 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>CSS Snow Fox</title>
-    <link rel="stylesheet" href="https://public.codepenassets.com/css/normalize-5.0.0.min.css">
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Animated Tesla Landing Page | @coding.stella</title>
+  <link rel="stylesheet" href="https://public.codepenassets.com/css/normalize-5.0.0.min.css">
 <link rel="stylesheet" href="./style.css">
 
-  </head>
-    
-  <body>
-  <div class="fox">
-  <div class="leg-outer">
-    <div class="leg">
-      <div class="paw">
-        <div class="log">
-          <div class="log-inner">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="leg-outer">
-    <div class="leg">
-      <div class="paw">
-        <div class="log">
-          <div class="log-inner"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="hind-leg-outer">
-    <div class="hind-leg-outer2">
-      <div class="hind-paw">
-        <div class="hind-log">
-          <div class="hind-log-inner">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="hind-leg-outer">
-    <div class="hind-leg-outer2">
-      <div class="hind-paw">
-        <div class="hind-log">
-          <div class="hind-log-inner">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-    <div class="body">
-    <div class="head">
-      <div class="ears">
-        <div class="ear"></div>
-        <div class="ear"></div>
-      </div>
-      <div class="face"></div>
-      <div class="snout"></div>
-    </div>
-    <div class="tail">
-      <div class="tail">
-        <div class="tail">
-          <div class="tail">
-            <div class="tail">
-              <div class="tail">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="tail2">
-        <div class="tail">
-          <div class="tail">
-            <div class="tail">
-              <div class="tail">
-                <div class="tail">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="snow"></div>
-    <script  src="./script.js"></script>
+</head>
 
-  </body>
-  
+<body>
+  <div id="root"></div>
+
+  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.2.0/react-transition-group.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.1/prop-types.js"></script>
+  <script src="https://unpkg.com/lodash@4.17.5/lodash.js"></script>
+  <script src="https://unpkg.com/bezier-easing@2.1.0/dist/bezier-easing.min.js"></script>
+  <script src="./script.js"></script>
+</body>
+
 </html>
